api gateway updated
