# api/internal/adapters/handlers/files.go
@@ -1,6 +1,7 @@
 package handlers
 
 import (
+	"fmt"
 	"github.com/MaksKazantsev/Chatter/api/internal/clients"
 	"github.com/MaksKazantsev/Chatter/api/internal/utils"
 	"github.com/gofiber/fiber/v2"
@@ -10,10 +11,10 @@ import (
 )
 
 type Files struct {
-	cl clients.Files
+	cl clients.FilesClient
 }
 
-func NewFiles(cl clients.Files) *Files {
+func NewFiles(cl clients.FilesClient) *Files {
 	return &Files{cl: cl}
 }
 
@@ -35,26 +36,58 @@ func (f *Files) Upload(c *fiber.Ctx) error {
 
 	file, err := c.FormFile("file")
 	if err != nil {
-		c.Status(http.StatusBadRequest).SendString(err.Error())
-		return nil
+		return utils.NewError(err.Error(), utils.ERR_CLIENT_INVALID_ARGUMENT)
 	}
 	fl, err := file.Open()
 	if err != nil {
-		c.Status(http.StatusBadRequest).SendString(err.Error())
-		return nil
+		return utils.NewError(err.Error(), utils.ERR_CLIENT_INVALID_ARGUMENT)
 	}
 	b, err := io.ReadAll(fl)
 	if err != nil {
-		c.Status(http.StatusBadRequest).SendString(err.Error())
-		return nil
+		return utils.NewError(err.Error(), utils.ERR_CLIENT_INVALID_ARGUMENT)
 	}
 	fileLink, err := f.cl.Upload(c.Context(), uuid.New().String(), token, b)
 	if err != nil {
-		st, msg := utils.HandleError(err)
-		_ = c.Status(st).SendString(msg)
-		return nil
+		return fmt.Errorf("client error: %w", err)
 	}
 
 	_ = c.SendString(fileLink)
+	return nil
+}
+
+// UpdateAvatar godoc
+// @Summary UpdateAvatar
+// @Description Updates user's avatar
+// @Tags Files
+// @Produce json
+// @Param Authorization header string true "token"
+//
+//	@Success        201 {object} int
+//	@Failure        400 {object} string
+//	@Failure        404 {object} string
+//	@Failure        405 {object} string
+//	@Failure        500 {object} string
+//	@Router         /files/update [post]
+func (f *Files) UpdateAvatar(c *fiber.Ctx) error {
+	token := parseAuthHeader(c)
+
+	file, err := c.FormFile("file")
+	if err != nil {
+		return utils.NewError(err.Error(), utils.ERR_CLIENT_INVALID_ARGUMENT)
+	}
+	fl, err := file.Open()
+	if err != nil {
+		return utils.NewError(err.Error(), utils.ERR_CLIENT_INVALID_ARGUMENT)
+	}
+	b, err := io.ReadAll(fl)
+	if err != nil {
+		return utils.NewError(err.Error(), utils.ERR_CLIENT_INVALID_ARGUMENT)
+	}
+	err = f.cl.UpdateAvatar(c.Context(), uuid.New().String(), token, b)
+	if err != nil {
+		return fmt.Errorf("client error: %w", err)
+	}
+
+	c.Status(http.StatusCreated)
 	return nil
 }
